# ChangeLog for virtual/perl-Scalar-List-Utils
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Scalar-List-Utils/ChangeLog,v 1.21 2008/03/31 17:09:27 jer Exp $

  31 Mar 2008; Jeroen Roovers <jer@gentoo.org>
  perl-Scalar-List-Utils-1.19.ebuild:
  Stable for HPPA too.

  29 Dec 2007; <welp@gentoo.org> perl-Scalar-List-Utils-1.18.ebuild:
  Keyworded ~sparc-fbsd; bug 203655

  15 Oct 2007; Markus Rothe <corsair@gentoo.org>
  perl-Scalar-List-Utils-1.19.ebuild:
  Stable on ppc64

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  perl-Scalar-List-Utils-1.19.ebuild:
  alpha/ia64/x86 stable

  23 May 2007; Peter Weller <welp@gentoo.org>
  perl-Scalar-List-Utils-1.19.ebuild:
  Keyworded ~x86-fbsd

  11 May 2007; Joshua Kinard <kumba@gentoo.org>
  perl-Scalar-List-Utils-1.19.ebuild:
  Stable on mips.

  07 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  perl-Scalar-List-Utils-1.19.ebuild:
  ppc stable

  17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  perl-Scalar-List-Utils-1.19.ebuild:
  Stable on sparc

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  perl-Scalar-List-Utils-1.19.ebuild:
  Marking stable amd64

*perl-Scalar-List-Utils-1.19 (02 Jan 2007)

  02 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +perl-Scalar-List-Utils-1.19.ebuild:
  Version bump

  25 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -perl-Scalar-List-Utils-1.14.ebuild:
  Cleaning up ebuilds

  05 Sep 2006; Joshua Kinard <kumba@gentoo.org>
  perl-Scalar-List-Utils-1.18.ebuild:
  Marked stable on mips.

  27 May 2006; Bryan Østergaard <kloeri@gentoo.org>
  perl-Scalar-List-Utils-1.18.ebuild:
  Stable on alpha.

  26 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  perl-Scalar-List-Utils-1.18.ebuild:
  Stable on amd64 wrt bug #133989

  27 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  perl-Scalar-List-Utils-1.18.ebuild:
  Stable on hppa

  27 Mar 2006; Markus Rothe <corsair@gentoo.org>