@@ -1,4 +1,5 @@
 EBUILD perl-Scalar-List-Utils-1.18.ebuild 537 RMD160 3287a0ec867506e7c1772012f32ccee863787daf SHA1 77cd2a3b21d5f668fd99978d35761c0245a3ed2b SHA256 06d82fb10aef7d04ed8d6694dd0328fc8065d2a3f3df855f6b23e29a20a07e9f
 EBUILD perl-Scalar-List-Utils-1.19.ebuild 577 RMD160 5a769e10f067942281c3da678404da1aee21fc04 SHA1 80e52ee53f534ccbb2c5b29a4da6c5853c31551f SHA256 267f147c5c1342c141cb3881aaeffc7b30271b05fe25994aac109e547e9d98fa
-MISC ChangeLog 2710 RMD160 7bc8b29aeace090cc60037c5dcefa8928e27cf41 SHA1 63d40520f5dbbf3dc5a1a95de6c667ce0b5a2cd9 SHA256 c546577e611301cde87574b4f874450ad56f73fdecbc0663ef701e80ec2bfa63
+EBUILD perl-Scalar-List-Utils-1.21.ebuild 577 RMD160 2468fa91edf30f0b1bdb82692fe612bd39d1ddfe SHA1 446d3d4ad6f6e3abdff3d7d8a3ed644cfac4fc57 SHA256 dc5464daa076845f9bdab04f3d1007ef3f08f5a43869b928b81ff4a75c4dce24
+MISC ChangeLog 2858 RMD160 27e8b859ca681003b755db926abb7df0e1aebc40 SHA1 5789993697d84db3c306425f9e17011c74c9afcc SHA256 421d88770104e561aaba7504e755690e3de6220a265da9d27ba9d818d90c26d9
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
