@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Scalar-List-Utils
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Scalar-List-Utils/ChangeLog,v 1.21 2008/03/31 17:09:27 jer Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Scalar-List-Utils/ChangeLog,v 1.22 2009/05/19 05:10:31 tove Exp $
+
+*perl-Scalar-List-Utils-1.21 (19 May 2009)
+
+  19 May 2009; Torsten Veller <tove@gentoo.org>
+  +perl-Scalar-List-Utils-1.21.ebuild:
+  Version bump
 
   31 Mar 2008; Jeroen Roovers <jer@gentoo.org>
   perl-Scalar-List-Utils-1.19.ebuild:
